# TypeNotes

./: README.md  README.org  TypeNotes.cabal
app/: Main.hs
bleh/: dsss17-slack.html
css/: style.css
posts/: coq-cheat-sheet.org  proof-pitfalls.org
templates/: comments.html  default.html  post-body.html  post-list.html  post.html  tag.html
