name:                TypeNotes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Chobbes/TypeNotes#readme
license:             MIT
license-file:        LICENSE
author:              Calvin Beck
maintainer:          hobbes@ualberta.ca
copyright:           2017 Calvin Beck
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hakyll >= 4.9.5.1 && < 5
  default-language:    Haskell2010

executable type-notes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hakyll >= 4.9.5.1 && < 5
                     , TypeNotes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Chobbes/TypeNotes
